Fixed ".radio-button-group .form-group" spacing

--- a/src/scss/backend/components/form_fields.scss
+++ b/src/scss/backend/components/form_fields.scss
@@ -706,7 +706,8 @@ label .invalid-feedback {
 }
 
 .radio-button-group .form-group {
-  margin-bottom: 10px;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .radio-button-group .form-text {
